--- a/src/assets/scss/components/_callout.scss
+++ b/src/assets/scss/components/_callout.scss
@@ -4,7 +4,7 @@
 	padding: $spacer;
 	&--yellow {
 		order: 12;
-		width: 100vw;
+		// width: 100vw;
 		margin-top: $spacer*1.25;
 		//margin-bottom: $spacer*1.25;
 		margin-left: -0.9375rem;
