--- a/src/assets/scss/components/_menu.scss
+++ b/src/assets/scss/components/_menu.scss
@@ -1,7 +1,4 @@
 .menu {
-	> section {
-		padding-top: 0;
-	}
 	&-section {
 		position: relative;
 		padding-top: $spacer*3;
@@ -76,10 +73,10 @@
 		}
 	}
 	&-preHeader {
-		position: absolute;
+		// position: absolute;
 		display: flex;
 		align-items: center;
-		justify-content: space-between;
+		justify-content: center;
 		margin-top: -$spacer*2;
 		padding: $spacer/2;
 		background-color: $primary;
@@ -87,7 +84,7 @@
 		transform: translateY(-50%);
 		z-index: 9;
 		h2 {
-			margin: 0;
+			margin: 0 1rem 0 0;
 			color: $white;
 		}
 		p {
@@ -110,6 +107,21 @@
 		border-bottom: 4px dashed $secondary;
 		&--noBorder {
 			border: 0;
+		}
+		&--fullWidth {
+			&:after {
+				content: "";
+				display: block;
+				position: absolute;
+				left: 50%;
+				top: 0;
+				height: 100%;
+				width: 100vw;
+				transform: translateX(-50%);
+				z-index: -1;
+				box-sizing: border-box;
+				background-color: $primary;
+			}
 		}
 	}
 	&-beerMenu {
